src/test/resources/annotator/Proto3IllegalFirstEnumValue.proto
syntax = "proto3";

package annotator;

enum TestEnum {
    UNKNOWN = <error descr="First enum value must be zero in proto3">1</error>;
}